# TheBook

chapter_three_practice/: Cargo.toml
chapter_three_practice/src/: main.rs
collections/src/: main.rs
enums/src/: main.rs
errors/: Cargo.toml
errors/src/: main.rs
generics/src/: main.rs
guessing_game/src/: main.rs
managing_projects/src/: main.rs
ownership/src/: main.rs
restaurant/src/: lib.rs
slices/src/: main.rs
structs/src/: main.rs
variables/src/: main.rs
