[package]
name = "errors"
version = "0.1.0"
edition = "2021"

# The default behavior of panic is to unwind the stack and clean things up
# to disable this behavior and reduce binary size you can use the following
#
# [profile.release]
# panic = 'abort'
#
# Memory used by this will need to be cleaned up by the OS when set to 'abort'

[dependencies]
